--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <form id="bookForm">
     <input type="text" name="title" id="bookTitle" placeholder="Title" autocomplete="off">
-    <input type="text" name="author" id="bookAuthor" autocomplete="off">
+    <input type="text" name="author" id="bookAuthor" placeholder="author" autocomplete="off">
     <button type="submit" id="addBookBtn">Add Book</button>
   </form>
 
