--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Awesome Books KJ</h1>
-  <section id="addingBooks"></section>
+  <section id="bookList"></section>
 
   <form id="bookForm">
     <input type="text" name="title" id="bookTitle" placeholder="Title" autocomplete="off">
