--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Awesome Books KJ</h1>
-  <section id="bookList"></section>
+  <section class="bookLibrary"> 
+    <h1>Awesome Books KJ</h1>
+    <section id="bookList"></section>
 
-  <form id="bookForm">
-    <input type="text" name="title" id="bookTitle" placeholder="Title" autocomplete="off">
-    <input type="text" name="author" id="bookAuthor" placeholder="Author" autocomplete="off">
-    <button type="submit" id="addBookBtn">Add Book</button>
-  </form>
-
+    <form id="bookForm">
+      <input type="text" name="title" id="bookTitle" placeholder="Title" autocomplete="off">
+      <input type="text" name="author" id="bookAuthor" placeholder="Author" autocomplete="off">
+      <button type="submit" id="addBookBtn">Add Book</button>
+    </form>
+  </section>
   <script src="main.js"></script>
 </body>
 </html>
