Modify index.html file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <section class="bookLibrary"> 
     <h1>Awesome Books KJ</h1>
     <section id="bookList"></section>
+    <h3>Add a new book</h3>
 
     <form id="bookForm">
       <input type="text" name="title" id="bookTitle" placeholder="Title" autocomplete="off">
